# Location-Anchor

./: CMakeLists.txt  Main.qml  locationtacker.cpp  locationtacker.h  locationtracker.cpp  locationtracker.h  main.cpp
